--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,23 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.data.rest.base-path=/api
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+
+# App Properties
+everydaymarket.app.jwtSecret= everyDaySecretKey
+everydaymarket.app.jwtExpirationMs= 86400000
+
+# Email Properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rpirritano@gmail.com
+spring.mail.password=Green12!@
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
